# NEUROS_STUDIO

./: .env.example  .gitignore  README.md  __init__.py  api.py  copilot.py  eslint.config.mjs  firestore.rules  metadata.json  next.config.ts  package-lock.json  package.json  replace-colors.js  tsconfig.json
app/: globals.css  (+2 more)
neuros/: README.md  __init__.py  pyproject.toml  requirements-backend.txt
neuros/archive/agents_v1/: code_agent.py  memory_agent.py  planner.py  robotics.py  vision_agent.py
neuros/archive/neuros_os_phase1/neuros_os/: README.md
neuros/archive/neuros_os_phase1/neuros_os/neuros/: __init__.py
neuros/archive/neuros_os_phase1/neuros_os/neuros/ai/: __init__.py
neuros/archive/neuros_os_phase1/neuros_os/neuros/bus/: __init__.py  message.py
neuros/archive/neuros_os_phase2/neuros_os/neuros/: __init__.py
neuros/archive/neuros_os_phase2/neuros_os/tests/: test_phase1.py  test_phase2.py
neuros/archive/neuros_os_phase3/neuros_os/: README_PHASE2.md  pyproject.toml
neuros/archive/neuros_os_phase3/neuros_os/examples/: example_01_blinker.py  example_03_ai_robot.py  example_05_fleet.py  example_06_ai_robot.py
neuros/archive/neuros_os_phase3/neuros_os/neuros/: __init__.py
neuros/archive/neuros_os_phase3/neuros_os/tests/: test_phase1.py  test_phase3.py
neuros/bridge/ros2/: __init__.py  bridge.py
neuros/config/: __init__.py  ai.yaml  loader.py  robot.yaml  runtime.yaml  safety.yaml
neuros/core/: __init__.py
neuros/core/capability_registry/: __init__.py  registry.py
neuros/core/mission_engine/: __init__.py  engine.py
neuros/core/orchestrator/: __init__.py  agent.py
neuros/core/tool_registry/: __init__.py  registry.py
neuros/deployment/: __init__.py  center.py
neuros/devices/: __init__.py  discovery.py  registry.py  robot.yaml  types.py
neuros/devices/discovery/: __init__.py  discovery.py
neuros/devices/manager/: __init__.py  manager.py
neuros/devices/telemetry/: __init__.py  storage.py
neuros/drivers/: __init__.py  base.py
neuros/events/: __init__.py  analytics.py  recorder.py  replay.py  store.py
neuros/memory/: __init__.py  robot_state.py  short_term.py  store.py
neuros/neuros.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
neuros/observability/: __init__.py
neuros/plugins/: __init__.py  manager.py
neuros/runtime/: __init__.py
neuros/runtime/adapters/: async_hal.py
neuros/runtime/api/: ai_api.py  files_api.py  ide_api.py  ros_api.py  ws_manager.py
neuros/runtime/daemon/: __init__.py  main.py
neuros/runtime/execution/: __init__.py  dispatcher.py  manager.py  queue.py  retry.py  state.py
neuros/runtime/lifecycle/: __init__.py
neuros/runtime/mission/: __init__.py  manager.py  models.py  persistence.py
neuros/runtime/recovery/: __init__.py  manager.py  policies.py
neuros/runtime/state/: __init__.py  machine.py
neuros/safety/: __init__.py  constraints.py  emergency_stop.py  sandbox.py  validator.py  watchdog.py
neuros/safety/audit_trail/: __init__.py  audit.py
neuros/safety/heartbeat/: __init__.py  monitor.py
neuros/safety/policies/: default.yaml
neuros/safety/validator/: __init__.py  validator.py
neuros/schemas/: __init__.py
neuros/schemas/events/: __init__.py  agent.py  base.py  battery.py  camera.py  mission.py  motor.py  navigation.py  skill.py  system.py  vision.py
neuros/sdk/: __init__.py
neuros/sdk/cli/: __init__.py
neuros/sdk/client/: __init__.py  robot.py
neuros/sdk/decorators/: __init__.py
neuros/sdk/examples/: example_01_basic.py  example_02_line_follower.py  example_02_nlp.py  example_03_decorators.py  example_04_autonomous_rover.py  example_07_rl_training.py
neuros/sdk/types/: __init__.py  common.py
neuros/simulator/: __init__.py  engine.py
neuros/skills/: __init__.py  base.py  engine.py  loader.py  marketplace.py  registry.py  validator.py  versioning.py
neuros/skills/v1/: __init__.py  diagnostics.py  manipulation.py  mobility.py  navigation.py  vision.py
neuros/tests/e2e/: test_mission_flow.py
neuros/tests/integration/: test_orchestrator.py
neuros/tests/mocks/: __init__.py  esp32.py  sensors.py
neuros/tests/unit/: test_workflow.py
neuros/vision/: __init__.py  cleanup.py  frame_buffer.py  metadata.py  process.py  worker.py
neuros/workflow/: __init__.py  actions.py  conditions.py  engine.py  executor.py  registry.py  triggers.py
(+144 files in other folders)
